2010-09-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/ohci.c (grub_ohci_cancel_transfer): Use %p to
	print pointer.
	* grub-core/bus/usb/uhci.c: Remove empty define.
	(grub_uhci_check_transfer): Add missing cast.
	* grub-core/bus/usb/usbhub.c (poll_nonroot_hub): Use %p to
	print pointer.
	* grub-core/term/usb_keyboard.c (grub_usb_keyboard_getkey): Use
	PRIuGRUB_SIZE.
	* include/grub/types.h (PRIuGRUB_SIZE): New definition.

2010-09-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (legacycfg): Add
	lib/i386/pc/vesa_modes_table.c on emu.

2010-09-19  BVK Chaitanya  <bvk.groups@gmail.com>

	Reduce number of temporary files generated by build system.

	* grub-core/gencmdlist.sh: Removed.
	* grub-core/genfslist.sh: Removed.
	* grub-core/genhandlerlist.sh: Removed.
	* grub-core/genmodsrc.sh: Removed.
	* grub-core/genpartmaplist.sh: Removed.
	* grub-core/genparttoollist.sh: Removed.
	* grub-core/gentermiinallist.sh: Removed.
	* grub-core/genvideolist.sh: Removed.

	* grub-core/genmod.sh.in: New file.
	* grub-core/gensyminfo.sh.in: New file.

	* conf/Makefile.common (CPPFLAGS_*_LIST): New marker flags.
	* conf/Makefile.extra-dist: Update with new files.
	* gentpl.py: Remove rules related to unnecessary temporary files.
	* grub-core/Makefile.am (syminfo.lst): New replacement for def-*
	and und-* files.
	* grub-core/Makefile.core.def: New rules for gensyminfo.sh and
	genmod.sh scripts.
	* grub-core/bus/usb/uhci.c: Remove empty #define.
	* grub-core/genmoddep.awk: Updated with new syminfo format.
	* util/bash-completion.d/Makefile.am: Add config.log to
	CLEANFILES.

2010-09-19  Yves Blusseau  <blusseau@zetam.org>

	* Makefile.util.def: Add forgotten $(LIBINTL) library.

2010-09-19  BVK Chaitanya  <bvk.groups@gmail.com>

	* util/grub-mkconfig.in: Check the config script for syntax errors
	before saving.

2010-09-19  Colin Watson  <cjwatson@ubuntu.com>
2010-09-19  Vladimir Serbinenko  <phcoder@gmail.com>
